backend/output.txt
Main.java:2: error: cannot find symbol
	public static voi main(String[] args) {
	              ^
  symbol:   class voi
  location: class Main
1 error
